--- a/app/src/main/res/layout/activity_recommended_services.xml
+++ b/app/src/main/res/layout/activity_recommended_services.xml
@@ -42,6 +42,7 @@
                 android:id="@+id/recommendedServicesRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:scrollbars="vertical"/>
 
         </LinearLayout>
