--- a/app/src/main/res/layout/activity_video_results.xml
+++ b/app/src/main/res/layout/activity_video_results.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
-    android:background="@android:color/background_light">
+    android:background="@drawable/background_wew">
 
     <!-- Toolbar with Back Button and Centered Title -->
     <androidx.appcompat.widget.Toolbar
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp"
-            android:background="@android:color/background_light">
+            >
 
 
             <!-- Video Recommendations RecyclerView -->
