--- a/app/src/main/res/layout/fragment_me_seller.xml
+++ b/app/src/main/res/layout/fragment_me_seller.xml
@@ -98,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:text="Settings"
+                android:visibility="gone"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/profile_btn"
                 android:gravity="center_vertical|start"
