--- a/app/src/main/res/layout/item_related_product.xml
+++ b/app/src/main/res/layout/item_related_product.xml
@@ -26,6 +26,7 @@
             android:id="@+id/tv_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:text="Product Name"
             android:textSize="16sp"
             android:textStyle="bold"
