--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:drawableStart="@drawable/lock"
+                    android:drawablePadding="20dp"
                     android:fontFamily="serif-monospace"
                     android:hint="Password"
                     android:inputType="textPassword"
@@ -112,6 +113,7 @@
                     android:paddingStart="20dp"
                     android:paddingEnd="50dp"
                     android:textAlignment="center"/>
+
 
                 <ImageView
                     android:id="@+id/eyeToggle"
@@ -127,12 +129,11 @@
 
 
         <TextView
-            android:id="@+id/titleText1"
+            android:id="@+id/forgot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Forgot Password?"
             android:textSize="12sp"
-            android:visibility="gone"
             android:textColor="@android:color/black"
             app:layout_constraintTop_toBottomOf="@id/cv2"
             app:layout_constraintStart_toStartOf="parent"
