--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,174 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:padding="16dp"
     tools:context=".Login">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- ScrollView to make the content scrollable -->
+    <ScrollView
+        android:id="@+id/mainScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:paddingTop="50dp"
-        android:paddingBottom="20dp">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/tv1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-black"
-            android:textSize="28sp"
-            android:textFontWeight="900"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:text="GearUp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"/>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/imageView1"
-            android:layout_width="150dp"
-            android:layout_height="130dp"
-            app:cardCornerRadius="100dp"
-            app:layout_constraintTop_toBottomOf="@id/tv1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginTop="30dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/automotive"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintTop_toBottomOf="@id/imageView1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp">
+            android:orientation="vertical"
+            >
 
-            <EditText
-                android:id="@+id/email"
+            <!-- GearUp Logo and Title -->
+            <LinearLayout
+                android:id="@+id/loginCardTitle"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/white"
-                android:drawableStart="@drawable/user"
-                android:fontFamily="serif-monospace"
-                android:hint="Username"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
-                android:textColorHint="#FF000000"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintTop_toBottomOf="@id/cv1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/white">
-
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:drawableStart="@drawable/lock"
-                    android:drawablePadding="20dp"
-                    android:fontFamily="serif-monospace"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:imeOptions="actionNext"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:background="@color/white"
-                    android:textColor="#FF000000"
-                    android:textColorHint="#FF000000"
-                    android:paddingStart="20dp"
-                    android:paddingEnd="50dp"
-                    android:textAlignment="center"/>
-
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
 
                 <ImageView
-                    android:id="@+id/eyeToggle"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/eye_close"
-                    android:contentDescription="Toggle password visibility"/>
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:src="@drawable/img_3"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center" />
+            </LinearLayout>
 
+            <!-- Login Card -->
+            <LinearLayout
+                android:id="@+id/loginCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/rounded_card_bg"
+                android:padding="32dp"
+                android:elevation="10dp"
+                android:layout_centerHorizontal="true">
 
-        <TextView
-            android:id="@+id/forgot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Forgot Password?"
-            android:textSize="12sp"
-            android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/cv2"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"/>
+                <!-- Email Field -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="12dp"
+                    android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/newAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Account?"
-            android:textSize="12sp"
-            android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/cv2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginTop="10dp"/>
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/user" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/loginbtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:layout_marginTop="40dp"
-            android:backgroundTint="#FF018786"
-            android:background="@drawable/password_btn"
-            android:text="LOGIN"
-            android:textAllCaps="true"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/newAccount"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"/>
+                    <EditText
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:hint="EMAIL"
+                        android:textColorHint="#F4C430"
+                        android:textColor="#FFFFFF"
+                        android:background="@android:color/transparent"
+                        android:layout_marginStart="12dp"
+                        android:inputType="textEmailAddress" />
+                </LinearLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#F4C430"
+                    android:layout_marginBottom="12dp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+                <!-- Password Field -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="12dp"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/lock" />
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="50dp"
+                        android:hint="PASSWORD"
+                        android:textColorHint="#F4C430"
+                        android:textColor="#FFFFFF"
+                        android:background="@android:color/transparent"
+                        android:layout_marginStart="12dp"
+                        android:inputType="textPassword" />
+
+                    <!-- Eye Toggle Button -->
+                    <ImageView
+                        android:id="@+id/eyeToggle"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginEnd="16dp"
+                        android:src="@drawable/eye_close"
+                        android:contentDescription="Toggle password visibility"
+                        android:layout_gravity="center_vertical"/>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#F4C430"
+                    android:layout_marginBottom="12dp" />
+
+                <!-- Forgot Password -->
+                <TextView
+                    android:id="@+id/forgot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Forgotten your password?"
+                    android:textColor="#F4C430"
+                    android:textSize="13sp"
+                    android:layout_marginTop="10dp" />
+
+                <!-- Login Button -->
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/loginbtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:text="Log in"
+                    android:textColor="#000000"
+                    android:background="@drawable/rounded_button"
+                    android:textStyle="bold"
+                    android:layout_marginTop="20dp" />
+
+                <!-- Bottom Text -->
+                <TextView
+                    android:id="@+id/newAccount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No account? Create One"
+                    android:textColor="#F4C430"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
