--- a/app/src/main/res/layout/activity_buyer_register.xml
+++ b/app/src/main/res/layout/activity_buyer_register.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/btn_back"
@@ -17,21 +16,19 @@
         android:padding="12dp"
         android:layout_gravity="start" />
 
-    <!-- ScrollView that will contain the form elements -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:fillViewport="true">
 
-        <!-- Inner LinearLayout that contains the form -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="20dp">
 
-            <!-- Title TextView -->
+            <!-- Title -->
             <TextView
                 android:id="@+id/tv1"
                 android:layout_width="wrap_content"
@@ -44,23 +41,12 @@
                 android:text="SIGNUP"
                 android:layout_gravity="center" />
 
-            <!-- Email Address Label -->
-            <TextView
-                android:id="@+id/emailLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Email Address"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="20dp" />
-
-            <!-- TextInputLayout for Email Address -->
+            <!-- Email Input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="20dp">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
@@ -75,18 +61,7 @@
                     android:inputType="textEmailAddress" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Password Label -->
-            <TextView
-                android:id="@+id/passwordLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Password"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp" />
-
-            <!-- TextInputLayout for Password -->
+            <!-- Password Input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
@@ -106,18 +81,7 @@
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Confirm Password Label -->
-            <TextView
-                android:id="@+id/cpasswordLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Confirm Password"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp" />
-
-            <!-- TextInputLayout for Confirm Password -->
+            <!-- Confirm Password Input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_confirm_password"
                 android:layout_width="match_parent"
@@ -137,18 +101,7 @@
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- First Name Label -->
-            <TextView
-                android:id="@+id/fn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="First Name"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp" />
-
-            <!-- TextInputLayout for First Name -->
+            <!-- First Name Input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_full_name"
                 android:layout_width="match_parent"
@@ -167,18 +120,7 @@
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Last Name Label -->
-            <TextView
-                android:id="@+id/ln"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Last Name"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp" />
-
-            <!-- TextInputLayout for Last Name -->
+            <!-- Last Name Input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_last_name"
                 android:layout_width="match_parent"
@@ -197,18 +139,7 @@
                     android:inputType="textPersonName" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Mobile Number Label -->
-            <TextView
-                android:id="@+id/mobileno"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mobile Number"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp" />
-
-            <!-- TextInputLayout for Mobile Number -->
+            <!-- Mobile Number Input -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_mobile_number"
                 android:layout_width="match_parent"
@@ -218,8 +149,9 @@
                     android:id="@+id/etemobileno"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="63 xxxx xxx xxx"
+                    android:hint="Phone Number"
                     android:textColorHint="#FF000000"
+                    android:maxLength="11"
                     android:textColor="@color/primary_text"
                     android:backgroundTint="@color/primary_light"
                     android:imeOptions="actionNext"
@@ -241,11 +173,10 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginTop="20dp" />
-
         </LinearLayout>
     </ScrollView>
 
-    <!-- Progress Bar Container -->
+    <!-- Progress Bar Overlay -->
     <FrameLayout
         android:id="@+id/progress_bar_container"
         android:layout_width="match_parent"
