--- a/app/src/main/res/layout/activity_checkout_form.xml
+++ b/app/src/main/res/layout/activity_checkout_form.xml
@@ -198,6 +198,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Phone Number"
+                    android:maxLength="11"
                     android:inputType="phone" />
             </com.google.android.material.textfield.TextInputLayout>
 
