--- a/app/src/main/res/layout/activity_seller_register.xml
+++ b/app/src/main/res/layout/activity_seller_register.xml
@@ -128,6 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Phone Number"
+                    android:maxLength="11"
                     android:inputType="phone" />
             </com.google.android.material.textfield.TextInputLayout>
 
