--- a/app/src/main/res/layout/activity_services_recommend.xml
+++ b/app/src/main/res/layout/activity_services_recommend.xml
@@ -193,17 +193,28 @@
         android:id="@+id/progress_bar_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#80000000"
         android:visibility="gone"
-        android:background="@android:color/white"
-        android:alpha="0.5"
-        >
+        android:gravity="center">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        android:layout_gravity="center"
+        android:background="@android:color/white">
 
         <ProgressBar
             android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="center"
-            android:indeterminate="true" />
-    </FrameLayout>
+            android:indeterminate="true"
+            style="@style/CustomProgressBar" />
+    </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</FrameLayout>
+
+
+    </LinearLayout>
