--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -18,7 +18,7 @@
             android:id="@+id/gear"
             android:layout_width="0dp"
             android:layout_height="350dp"
-            android:src="@drawable/gear"
+            android:src="@drawable/img_3"
             android:scaleType="centerCrop"
             app:layout_constraintWidth_percent="1.0"
             app:layout_constraintTop_toTopOf="parent"
