--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,7 @@
                         android:fontFamily="serif-monospace"
                         android:paddingStart="20dp"
                         android:paddingEnd="50dp"
+                        android:drawablePadding="20dp"
                         android:imeOptions="actionNext"
                         android:hint="Password"
                         android:textColorHint="#FF000000"
